Remove base path for local testing

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Trading Calculator",
   "short_name": "Trading Calc",
   "description": "Calculate position size, risk, and stop loss for trading",
-  "start_url": "/trading-calculator/",
-  "scope": "/trading-calculator/",
+  "start_url": "/",
+  "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2f6fed",
   "orientation": "portrait",
